--- a/styles.css
+++ b/styles.css
@@ -13,33 +13,18 @@ header {
     text-align: center;
 }
 
-nav ul {
-    list-style: none;
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-    margin: 0 1em;
-}
-
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-}
-
-#hero {
-    background: url('hero-bg.jpg') no-repeat center center/cover;
-    color: #00fff;
-    text-align: center;
-    padding: 5em 0;
-}
-
-#about, #projects, #contact {
+main {
+    display: flex;
+    justify-content: space-around;
     padding: 2em;
-    margin: 2em 0;
+}
+
+section {
     background-color: #fff;
+    padding: 2em;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    width: 45%;
 }
 
 h2 {
@@ -47,30 +32,30 @@ h2 {
     margin-bottom: 1em;
 }
 
-.project {
+.menu-item {
     background-color: #eaeaea;
     padding: 1em;
     margin: 1em 0;
     border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
 
-form {
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-}
-
-label {
-    font-weight: bold;
-}
-
-input, textarea {
-    padding: 0.5em;
-    border: 1px solid #ccc;
+.menu-item img {
+    max-width: 100%;
     border-radius: 5px;
+    margin-bottom: 1em;
 }
 
-button {
+.menu-item h3 {
+    margin: 0;
+}
+
+.menu-item p {
+    margin: 0.5em 0;
+}
+
+.menu-item button {
     padding: 0.5em 1em;
     border: none;
     background-color: #333;
@@ -79,16 +64,32 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+.menu-item button:hover {
     background-color: #555;
 }
 
-footer {
-    text-align: center;
-    padding: 1em 0;
+#cart ul {
+    list-style: none;
+    padding: 0;
+}
+
+#cart li {
+    background-color: #eaeaea;
+    padding: 1em;
+    margin: 0.5em 0;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+#cart button {
+    padding: 0.5em 1em;
+    border: none;
     background-color: #333;
     color: #fff;
-    position: relative;
-    bottom: 0;
-    width: 100%;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#cart button:hover {
+    background-color: #555;
 }
